# PFE-2025

./: .dockerignore  Dockerfile  Makefile  README.docker.md  README.md  constants.py  docker-compose.yml  download_models.py  main.py  pyproject.toml  test.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/history/: route.ts
frontend/app/api/sample/: route.ts
frontend/app/api/sample/[jobId]/: route.ts
frontend/app/api/sample/[jobId]/download/: route.ts
frontend/components/: HistoryPanel.tsx
frontend/lib/: historyCache.ts
lib/: audio.py  describe.py
sample_pack/: metadata.json
